# exg

./: .gitignore  Cargo.toml  LICENSE  README.md  requirements.txt
benches/: fiff_read.rs
data/: sample2_raw.fif
scripts/: bench_fiff.py  compare.py  gen_fiff_vectors.py  gen_vectors.py
src/: config.rs  epoch.rs  io.rs  lib.rs  normalize.rs  reference.rs  resample.rs
src/fiff/: constants.rs  info.rs  mod.rs  raw.rs  tag.rs  tree.rs
src/filter/: apply.rs  design.rs  mod.rs
tests/: common.rs  test_epoch.rs  test_fiff.rs  test_filter.rs  test_normalize.rs  test_pipeline.rs  test_reference.rs  test_resample.rs
tests/vectors/: average_reference.safetensors  baseline_correction.safetensors  fiff_buf_raw.safetensors  fiff_sample_data.safetensors  fiff_sample_data_short.safetensors  fiff_sample_info.safetensors  filter_coeffs_hp05_256hz.safetensors  filter_hp05_256hz.safetensors  resample_1024_to_256.safetensors  resample_2000_to_256.safetensors  resample_250_to_256.safetensors  resample_512_to_256.safetensors  zscore_global.safetensors
