[package]
name          = "exg"
version       = "0.0.1"
edition       = "2021"
description   = "EXG (EEG/ECG/EMG) preprocessing — native Rust DSP + FIF reader, numerical parity with MNE-Python"
keywords      = ["exg", "eeg", "ecg", "emg", "mne"]
authors       = ["Eugene Hauptmann"]
license-file  = "LICENSE"
homepage      = "https://github.com/eugenehp/exg"
repository    = "https://github.com/eugenehp/exg"
documentation = "https://docs.rs/exg"

exclude = [
    "data/*",
    "scripts/",
    "tests/vectors/",
    "comparison"
]

[lib]
name = "exg"
path = "src/lib.rs"

[[bin]]
name = "preproc"
path = "src/bin/preproc.rs"

[[bin]]
name = "pipeline_steps"
path = "src/bin/pipeline_steps.rs"

[dependencies]
rustfft     = "6"
ndarray     = { version = "0.17.2", features = ["rayon"] }
rayon       = "1"
safetensors = "0.7"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
thiserror   = "2.0.18"
clap        = { version = "4", features = ["derive"] }

[dev-dependencies]
approx    = "0.5"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name    = "fiff_read"
harness = false

[profile.release]
opt-level = 3
lto       = "thin"